--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Raphael Kuseni Jena | WDD 130</title>
+    <!-- index.html -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Raphael Kuseni Jena | WDD 130</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header>
