--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Raphael Kuseni Jena | WDD 130</title>
-    <!-- index.html -->
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raphael Kuseni Jena | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <meta name="Description" content="This page potrays my professional summary.">
+    <meta name="Author" content="Raphael Kuseni Jena">
   </head>
   <body>
     <header>
@@ -19,12 +17,20 @@
       </nav>
     </header>
     <main>
+
       <h1>Raphael Kuseni Jena | WDD 130</h1>
-      <img src="images/Professional.jpg" alt="Hello, my name is Raphael Kuseni Jena" width="200">
-      <p>Hello! My name is Raphael Kuseni Jena. I am an energetic and self-motivated individual with a growth mindset and a strong focus on building collaborative teamenvironments. Skilled in analyzing organizational processes and continuously seeking improvement. Committedto delivering results through a combination of competence and productivity. Graduated from Brigham YoungUniversity with a Bachelor of Science in Applied Business Management.</p>
+      <img src="images/professional.jpg" alt="Hello, my name is Raphael Kuseni Jena" width="200">
+      <p>Hello! My name is Raphael Kuseni Jena. I am an energetic and self-motivated individual with a growth mindset and a strong focus on building collaborative team environments. Skilled in analyzing organizational processes and continuously seeking improvement. Committed to delivering results through a combination of competence and productivity. Graduated from Brigham Young University with a Bachelor of Science in Applied Business Management.</p>
+    
     </main>
+
+    <aside>
+      <h2>South Africa</h2>
+      <img src="images/flag.jpg"  alt="RSA Flying Flag" width="200">
+      <p>South Africa, the southern most country on the African continent, is renowned for its varied topography, great natural beauty, and cultural diversity. These attributes have made it a favored destination for travelers since the legal ending of apartheid (Afrikaans: “apartness,” or racial segregation) in 19941. With a population of approximately 64.7 million, South Africa boasts a blend of various ethnicities, languages, and cultures. Its demographics are diverse, and the country’s history is marked by significant events, including the struggle against apartheid and the subsequent transition to democracy</p>
+    </aside>
     <footer>
-      <p>©️ 2023 • Raphael Kuseni Jena • Pretoria, South Africa</p>
+      <p>©️ 2024 • Raphael Kuseni Jena • Pretoria, South Africa</p>
     </footer>
   </body>
 </html>
