Update2 site-plan-rafting.html

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafting Site Plan | Raphael Kuseni Jena</title>
-    <meta name="Description" content="This page is to give you more infomation on a rafting company which organizes and manages trips which most often include experienced guides. The business intent is to provide a thrilling and safe experience to individuals and groups for a fee.">
+    <meta name="Description" content="This page is to give you more information on a rafting company that organizes and manages trips which most often include experienced guides. The business intent is to provide a thrilling and safe experience to individuals and groups for a fee.">
     <meta name="Author" content="Raphael Kuseni Jena">
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
   </head>
@@ -34,7 +34,7 @@
             <p>Question: "Is rafting safe for kids? We're traveling with our 10-year-old."</p>
             <p>Answer: Yes, it's family-friendly! We have kid-friendly routes with gentle rapids. Children aged 8 and above can join. Safety is our priority, and life jackets are provided for everyone.</p>
       
-            <p1>Whether you're a novice or an experienced rafter, our website caters to your adventurous spirit! </p1>
+            <p>Whether you're a novice or an experienced rafter, our website caters to your adventurous spirit! </p>
 
   
     <h2>Branding</h2>
