--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
       <h1>Raphael Kuseni Jena | WDD 130</h1>
-      <img src="images/proile.jpg" alt="Hello, my name is Raphael Kuseni Jena" width="200">
+      <img src="images/profile.jpg" alt="Hello, my name is Raphael Kuseni Jena" width="200">
       <p>Hello! My name is Raphael Kuseni Jena. I am an energetic and self-motivated individual with a growth mindset and a strong focus on building collaborative team environments. Skilled in analyzing organizational processes and continuously seeking improvement. Committed to delivering results through a combination of competence and productivity. Graduated from Brigham Young University with a Bachelor of Science in Applied Business Management.</p>
     </main>
     <aside>
