site plan fix 1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raphael Kuseni Jena | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <meta name="Description" content="This page potrays my professional summary.">
+    <meta name="Description" content="This page potrays my personal summary.">
     <meta name="Author" content="Raphael Kuseni Jena">
   </head>
 
