--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <a href="#">Home</a>
         <a href="wwr/">Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+        <a href="linkedin.com/in/raphaeljena">Raphael Linkedin</a>
+        <a href="https://www.facebook.com/raphaelkjena">Raphael Facebook</a>
+
       </nav>
 
     </header>
@@ -46,7 +49,7 @@
     <footer>
       <p>©️ 2024 • Raphael Kuseni Jena • Pretoria, South Africa</p>
     </footer>
-    
+
   </body>
 
 <!-- 16 March 2024 -->
