--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#">Home</a>
         <a href="wwr/">Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-        <a href="linkedin.com/in/raphaeljena">Raphael Linkedin</a>
+        <a href="https://www.linkedin.com/in/raphaeljena">Raphael Linkedin</a>
         <a href="https://www.facebook.com/raphaelkjena">Raphael Facebook</a>
 
       </nav>
