--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <strong>Below is my favorate temples.</strong> 
       <br>
                     
-      <ul>
+      <ul class="box">
         <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
         <li><a href="https://www.churchofjesuschrist.org/temples/details/harare-zimbabwe-temple?lang=eng" target="_blank">Harare Zimbabwe Temple</a></li>
         <li><a href="https://www.churchofjesuschrist.org/temples/details/johannesburg-south-africa-temple?lang=eng" target="_blank">Johannesburg RSA Temple</a></li>
