--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <nav>
         <a href="#">Home</a>
-        <a href="wwr/">Rafting Website</a>
+        <a href="wwr/about.html">Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
         <a href="https://www.linkedin.com/in/raphaeljena">Linkedin</a>
         <a href="https://www.facebook.com/raphaelkjena">Facebook</a>
