--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raphael Kuseni Jena | WDD 130</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <meta name="Description" content="This page potrays my personal summary.">
-    <meta name="Author" content="Raphael Kuseni Jena">
-  </head>
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Raphael Kuseni Jena | WDD 130</title>
+      <link href="styles/rafting.css" rel="stylesheet">
+      <meta name="description" content="This is a personal about me page.">
+      <meta name="author" content="Raphael Kuseni Jena">
+    </head>
 
   <body>
 
