--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       </nav>
 
     </header>
-
+    
+  <div class="grid">
     <main>
       <h1>Raphael Kuseni Jena | WDD 130</h1>
       <img src="images/profile.jpg" alt="Hello, my name is Raphael Kuseni Jena" width="200">
@@ -39,7 +40,7 @@
       </ul>
         
     </main>
-
+  </grid>
     <aside class="box">      
       <h2>South Africa</h2>
       <img src="images/flag.jpg"  alt="RSA Flying Flag" width="200">
