--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
       </ul>
         
     </main>
-  </grid>
+  </div>
+
   <div class="grid">
     <aside class="box">   
 
@@ -49,7 +50,7 @@
       <p>South Africa, the southern most country on the African continent, is renowned for its varied topography, great natural beauty, and cultural diversity. These attributes have made it a favored destination for travelers since the legal ending of apartheid (Afrikaans: “apartness,” or racial segregation) in 19941. With a population of approximately 64.7 million, South Africa boasts a blend of various ethnicities, languages, and cultures. Its demographics are diverse, and the country’s history is marked by significant events, including the struggle against apartheid and the subsequent transition to democracy</p>
     </aside>
   </div>
-  
+
     <footer>
       <p>©️ 2024 • Raphael Kuseni Jena • Pretoria, South Africa</p>
     </footer>
