--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About Us | The Rafting Company</title>
+        <title>The Rafting Company - About Us</title>
         <link href="styles/rafting.css" rel="stylesheet">
         <meta name="description" content="This is a personal about me page.">
         <meta name="author" content="Raphael Kuseni Jena">
