--- a/quiz.html
+++ b/quiz.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML and CSS Quiz</title>
+    <link rel="stylesheet" href="styles/quiz.css">
+    <meta name="Description" content="This assignment applies the concepts in the learning activities on HTML form structure and style. The quiz will have basic questions about HTML and CSS.">
+    <meta name="Author" content="Raphael Kuseni Jena">
 </head>
 <body>
-    <h1>HTML and CSS Quiz</h1>
+    <strong><h1>Raphael BYUI wdd130</h1></strong>
+    <h2>HTML and CSS Quiz</h2>
 
     <form>
         <!-- Question 1: Fill in the blank -->
