--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
       <nav>
         <a href="#">Home</a>
+        <a href="quiz.html">Quiz</a>
         <a href="wwr/">Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
         <a href="https://www.linkedin.com/in/raphaeljena">Linkedin</a>
