--- a/quiz.html
+++ b/quiz.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+        <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML and CSS Quiz</title>
     <link rel="stylesheet" href="styles/quiz.css">
     <meta name="Description" content="This assignment applies the concepts in the learning activities on HTML form structure and style. The quiz will have basic questions about HTML and CSS.">
     <meta name="Author" content="Raphael Kuseni Jena">
 </head>
+
 <body>
+    <header class="grid_header">
+        <div class="logo"><img src="wwr/images/ripple.png" alt="Rafting Site Logo" width=200></div>
+            <nav class="box_nav">
+                <div class="box_button"><a href="index.html">Home</a></div>
+                <a href="wwr/">Rafting Website</a>
+                <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="https://www.linkedin.com/in/raphaeljena">Linkedin</a>
+                <a href="https://www.facebook.com/raphaelkjena">Facebook</a>
+                <a href="wwr/about.html">About</a>
+            </nav>
+
+        </header>
     <strong><h1>Raphael BYUI wdd130</h1></strong>
     <h2>HTML and CSS Quiz</h2>
 
@@ -38,4 +52,5 @@
         <button type="submit">Submit Quiz</button>
     </form>
 </body>
+
 </html>
