--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,7 +16,7 @@
                     <div class="box_button"><a href="/index.html">Home</a></div>
                     <div class="box_button"><a href="#">About</a></div>
                     <div class="box_button"><a href="site/trips.html">Trips</a></div>
-                    <div class="box_button"><a href="site/contact.html">Contact</a></div>
+                    <div class="box_button"><a href="/contact.html">Contact</a></div>
                 </nav>
 
             </header>
