--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,7 +16,7 @@
                     <div class="box_button"><a href="/index.html">Home</a></div>
                     <div class="box_button"><a href="#">About</a></div>
                     <div class="box_button"><a href="site/trips.html">Trips</a></div>
-                    <div class="box_button"><a href="/contact.html">Contact</a></div>
+                    <div class="box_button"><a href="contact.html">Contact</a></div>
                 </nav>
 
             </header>
@@ -54,9 +54,9 @@
              
                 <p>&copy; 2024 • The Ripple Rafting Company • Raphael Kuseni Jena</p>
             <nav class="sociallinks"> 
-                <a href="https://www.facebook.com"><img src="images/facebook.jpeg" alt="Graphic link to Facebook" width="30"></a>
-                <a href="https://www.instagram.com"><img src="images/insta.jpeg" alt="Graphic link to Instagram" width="30"></a>
-                <a href="https://www.twitter.com"><img src="images/x.png" alt="Graphic link to Youtube" width="30"></a>
+                <a href="https://www.facebook.com"><img src="/wwr/images/facebook.png" alt="Graphic link to Facebook" width="30"></a>
+                <a href="https://www.instagram.com"><img src="/wwr/images/insta.png" alt="Graphic link to Instagram" width="30"></a>
+                <a href="https://www.twitter.com"><img src="/wwr/images/x.png" alt="Graphic link to Youtube" width="30"></a>
             </nav>               
             </footer>
         </body>
