--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -15,6 +15,7 @@
             <div class="logo"><img src="images/ripple.png" alt="Rafting Site Logo"></div>
             <nav class="box_nav">
                 <div class="box_button"><a href="/index.html">Home Page</a></div>
+                <a href="quiz.html">Quiz</a>
                 <div class="box_button"><a href="about.html">About Us</a></div>
                 <div class="box_button"><a href="trips.html">Trips</a></div>
                     
@@ -89,9 +90,10 @@
             <p>&copy; 2024 | The Ripple Rafting Company | Raphael Kuseni Jena</p>
             
             <nav class="sociallinks"> 
-                <a href="https://www.facebook.com"><img src="images/facebook.jpeg" alt="Graphic link to Facebook"></a>
-                <a href="https://www.instagram.com"><img src="images/insta.jpeg" alt="Graphic link to Instagram"></a>
-                <a href="https://www.twitter.com"><img src="images/x.png" alt="Graphic link to X"></a>
+
+                <a href="https://www.facebook.com"><img src="/wwr/images/facebook.png" alt="Graphic link to Facebook" width="30"></a>
+                <a href="https://www.instagram.com"><img src="/wwr/images/insta.png" alt="Graphic link to Instagram" width="30"></a>
+                <a href="https://www.twitter.com"><img src="/wwr/images/x.png" alt="Graphic link to Youtube" width="30"></a>
             </nav>               
         </footer>
     </body>
