--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -14,8 +14,8 @@
         <header class="grid_header">
             <div class="logo"><img src="images/ripple.png" alt="Rafting Site Logo"></div>
             <nav class="box_nav">
-                <div class="box_button"><a href="/index.html">Home Page</a></div>
-                <div class="box_button"><a href="/quiz.html">Quiz</a>
+                <div class="box_button"><a href="index.html">Home Page</a></div>
+                <div class="box_button"><a href="quiz.html">Quiz</a>
                 <div class="box_button"><a href="about.html">About Us</a></div>
                 <div class="box_button"><a href="trips.html">Trips</a></div>
                     
