Main Assign Update1

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
       <nav>
         <a href="#">Home</a>
-        
-        <a href="wwr/about.html">Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+        <a href="wwr/rafting-site.html">Rafting Website</a>
+        <a href="wwr/about.html">About</a>
+        <br>
         <a href="https://www.linkedin.com/in/raphaeljena">Linkedin</a>
         <a href="https://www.facebook.com/raphaelkjena">Facebook</a>
-        <a href="wwr/about.html">About</a>
+        <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
       </nav>
 
     </header>
@@ -62,6 +62,6 @@
 
   </body>
 
-<!-- 16 March 2024 -->
+<!-- 8 April 2024 -->
 
 </html>
