--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About The Rafting Company</title>
+        <title>About The Ripple Rafting Company</title>
         <link href="styles/rafting.css" rel="stylesheet">
         <meta name="description" content="This is a personal about me page.">
         <meta name="author" content="Raphael Kuseni Jena">
@@ -13,16 +13,17 @@
             <header class="grid_header">
             <div class="logo"><img src="images/ripple.png" alt="Rafting Site Logo"></div>
                 <nav class="box_nav">
-                    <div class="box_button"><a href="index.html">Home</a></div>
-                    <div class="box_button"><a href="#">About</a></div>
+                    <div class="box_button"><a href="rafting-site.html">Home</a></div>
                     <div class="box_button"><a href="site/trips.html">Trips</a></div>
+                    <div class="box_button"><a href="#">About</a></div>
                     <div class="box_button"><a href="contact.html">Contact</a></div>
+                    
                 </nav>
 
             </header>
 
             <main class="box_main"> 
-                <h1>The Ripple Rafting Company</h1> 
+                <h1>About Us | The Ripple Rafting Company</h1> 
                     <div class="hero">                        
                     <img src="images/bg.webp" alt="Background Picture">
                     
@@ -41,11 +42,11 @@
                     <section >
                         <h2>Adventure Awaits You!</h2>
                         <div class="box_button1">
-                            <figure><img src="images/rift1.jpg" alt="Happy Rafting Client 1"><figcaption>Raft 1</figcaption></figure>
-                            <figure><img src="images/rift2.webp" alt="Happy Rafting Client 2"><figcaption>Raft 2</figcaption></figure>
-                            <figure><img src="images/rift3.jpg" alt="Happy Rafting Client 3"><figcaption>Raft 3</figcaption></figure>
-                            <figure><img src="images/rift4.jpg" alt="Happy Rafting Client 4"><figcaption>Raft 4</figcaption></figure>
-                            <figure><img src="images/rift5.jpg" alt="Happy Rafting Client 5"><figcaption>Raft 5</figcaption></figure> 
+                            <figure><img src="images/rift1.jpg" alt="Happy Rafting Client 1"><figcaption>Competetive</figcaption></figure>
+                            <figure><img src="images/rift2.webp" alt="Happy Rafting Client 2"><figcaption>Team Building</figcaption></figure>
+                            <figure><img src="images/rift3.jpg" alt="Happy Rafting Client 3"><figcaption>Fun</figcaption></figure>
+                            <figure><img src="images/rift4.jpg" alt="Happy Rafting Client 4"><figcaption>Thrilling</figcaption></figure>
+                            <figure><img src="images/rift5.jpg" alt="Happy Rafting Client 5"><figcaption>Awesome Adventures</figcaption></figure> 
                         </div> 
                     </section>
             </main>  
