--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -15,16 +15,16 @@
             <div class="logo"><img src="images/ripple.png" alt="Rafting Site Logo"></div>
 
             <nav class="box_nav">
-                <div class="box_button"><a href="index.html">Home Page</a></div>
-                <div class="box_button"><a href="quiz.html">Quiz</a></div>
-                <div class="box_button"><a href="about.html">About Us</a></div>
-                <div class="box_button"><a href="trips.html">Trips</a></div>       
+                <div class="box_button"><a href="rafting-site.html">Home</a></div>
+                <div class="box_button"><a href="site/trips.html">Trips</a></div> 
+                <div class="box_button"><a href="about.html">About</a></div>
+                <div class="box_button"><a href="contact.html">Contact</a></div>   
             </nav>
 
         </header>
 
         <main>
-            <h1>The Ripple Rafting Company</h1>
+            <h1>About | The Ripple Rafting Company</h1>
             
             <div class="img_emp"> 
                 <aside >
