--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
             <div class="logo"><img src="images/ripple.png" alt="Rafting Site Logo"></div>
                 <nav class="box_nav">
                     <div class="box_button"><a href="rafting-site.html">Home</a></div>
-                    <div class="box_button"><a href="site/trips.html">Trips</a></div>
+                    <div class="box_button"><a href="trips.html">Trips</a></div>
                     <div class="box_button"><a href="#">About</a></div>
                     <div class="box_button"><a href="contact.html">Contact</a></div>
                     
