--- a/wwr/rafting-site.html
+++ b/wwr/rafting-site.html
@@ -14,7 +14,7 @@
         <div class="logo"><img src="images/ripple.png" alt="Rafting Site Logo"></div>
             <nav class="box_nav">
                 <div class="box_button"><a href="rafting-site.html">Home</a></div>
-                <div class="box_button"><a href="site/trips.html">Trips</a></div>
+                <div class="box_button"><a href="trips.html">Trips</a></div>
                 <div class="box_button"><a href="about.html">About</a></div>
                 <div class="box_button"><a href="contact.html">Contact</a></div>
             </nav>
@@ -25,7 +25,7 @@
             <h1>Welcome To The Ripple Rafting Company</h1> 
             <div class="hero">                        
                 <img src="images/bg.webp" alt="Background Picture">
-                <div class="adv_button"><a href="site/trips.html">Choose Your Adventure Wisely</a></div>
+                <div class="adv_button"><a href="trips.html">Choose Your Adventure Wisely</a></div>
             </div> 
             <br> 
             <h2>Our Purpose</h2>
