--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -16,7 +16,7 @@
 
             <nav class="box_nav">
                 <div class="box_button"><a href="rafting-site.html">Home</a></div>
-                <div class="box_button"><a href="site/trips.html">Trips</a></div> 
+                <div class="box_button"><a href="trips.html">Trips</a></div> 
                 <div class="box_button"><a href="about.html">About</a></div>
                 <div class="box_button"><a href="contact.html">Contact</a></div>   
             </nav>
