--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,16 +11,15 @@
 
     <body class="box_parent">
         <header class="grid_header">
-        <div class="logo"><img src="images/ripple.png" alt="Rafting Site Logo"></div>
+            <div class="logo"><img src="images/ripple.png" alt="Rafting Site Logo"></div>
             <nav class="box_nav">
-                <div class="box_button"><a href="rafting-site.html">Home</a></div>
+                <div class="box_button"><a href="index.html">Home</a></div>
                 <div class="box_button"><a href="trips.html">Trips</a></div>
                 <div class="box_button"><a href="about.html">About</a></div>
                 <div class="box_button"><a href="contact.html">Contact</a></div>
             </nav>
 
         </header>
-
         <main class="box_main"> 
             <h1>Welcome To The Ripple Rafting Company</h1> 
             <div class="hero">                        
