--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About The Ripple Rafting Company</title>
+    <title>Site Plan | The Ripple Rafting Company</title>
     <link href="styles/site-plan-rafting.css" rel="stylesheet">
     <meta name="description" content="This page is to give you more infomation on a rafting company which organizes and manages trips which most often include experienced guides. The business intent is to provide a thrilling and safe experience to individuals and groups for a fee..">
     <meta name="author" content="Raphael Kuseni Jena">
