Index fix final

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <nav>
         <a href="#">Home</a>
-        <a href="wwr/rafting-site.html">Rafting Website</a>
+        <a href="wwr/index.html">Rafting Website</a>
         <a href="wwr/about.html">About</a>
         <br>
         <a href="https://www.linkedin.com/in/raphaeljena">Linkedin</a>
