--- a/quiz.html
+++ b/quiz.html
@@ -13,7 +13,7 @@
         <div class="logo"><img src="wwr/images/ripple.png" alt="Rafting Site Logo" width=200></div>
             <nav class="box_nav">
                 <div class="box_button"><a href="index.html">Home</a></div>
-                <a href="wwr/">Rafting Website</a>
+                <a href="wwr/index.html">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
                 <a href="https://www.linkedin.com/in/raphaeljena">Linkedin</a>
                 <a href="https://www.facebook.com/raphaelkjena">Facebook</a>
