--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -15,7 +15,7 @@
             <div class="logo"><img src="images/ripple.png" alt="Rafting Site Logo"></div>
 
             <nav class="box_nav">
-                <div class="box_button"><a href="rafting-site.html">Home</a></div>
+                <div class="box_button"><a href="index.html">Home</a></div>
                 <div class="box_button"><a href="trips.html">Trips</a></div> 
                 <div class="box_button"><a href="about.html">About</a></div>
                 <div class="box_button"><a href="contact.html">Contact</a></div>   
