--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -91,7 +91,7 @@
         </main>   
 
         <footer class="box_footer">
-            
+            <a href="images/trips_wireframe.html" target="_blank">Wireframe</a>
             <p>&copy; 2024 | The Ripple Rafting Company | Raphael Kuseni Jena</p>
             
             <nav class="sociallinks"> 
