--- a/wwr/about.html
+++ b/wwr/about.html
@@ -52,7 +52,7 @@
         </main>  
 
         <footer class="box_footer">
-
+            <a href="images/about_wireframe.jpeg" target="_blank">Wireframe</a>
             <p>&copy; 2024 | The Ripple Rafting Company | Raphael Kuseni Jena</p>
             
             <nav class="sociallinks"> 
