--- a/wwr/index.html
+++ b/wwr/index.html
@@ -47,6 +47,7 @@
         </main>  
 
         <footer class="box_footer">
+            <a href="images/index_wireframe.html" target="_blank">Wireframe</a>
             <p>&copy; 2024 | The Ripple Rafting Company | Raphael Kuseni Jena</p>
             <nav class="sociallinks">    
                 <a href="https://www.facebook.com"><img src="images/facebook.png" alt="Graphic link to Facebook" width="30"></a>
