--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,7 +24,7 @@
         </header>
 
         <main>
-            <h1>About | The Ripple Rafting Company</h1>
+            <h1>Contact Us | The Ripple Rafting Company</h1>
             
             <div class="img_emp"> 
                 <aside >
